<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

   <include
       android:id="@+id/toolbar"
       layout="@layout/layout_toolbar"/>

   <Button
       android:id="@+id/button_productOne"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/toolbar"
       android:layout_marginTop="@dimen/high_margin"
       style="@style/HomeButtons"
       android:text="@string/product_1"/>

   <Button
       android:id="@+id/button_productTwo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/button_productOne"
       style="@style/HomeButtons"
       android:text="@string/product_2"/>

   <Button
       android:id="@+id/button_productThree"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/button_productTwo"
       style="@style/HomeButtons"
       android:text="@string/product_3"/>

   <Button
       android:id="@+id/button_showProducts"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/button_productThree"
       style="@style/HomeButtons"
       android:text="@string/show"/>

</androidx.constraintlayout.widget.ConstraintLayout>