<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/small_margin"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/uni_padding">

            <ImageView
                android:id="@+id/imageView_productImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/textView_salePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imageView_productImage"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/normal_margin"
                android:textSize="@dimen/big_text_size"
                android:fontFamily="@font/gotham_narrow"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView_regularPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/textView_salePrice"
                app:layout_constraintTop_toTopOf="@id/textView_salePrice"
                app:layout_constraintBottom_toBottomOf="@id/textView_salePrice"
                android:layout_marginStart="@dimen/normal_margin"
                android:textSize="@dimen/heading_text_size"
                android:fontFamily="@font/gotham_narrow"
                android:textColor="@color/hint_color"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/hint_color"
                app:layout_constraintStart_toStartOf="@id/textView_regularPrice"
                app:layout_constraintEnd_toEndOf="@id/textView_regularPrice"
                app:layout_constraintTop_toTopOf="@id/textView_regularPrice"
                app:layout_constraintBottom_toBottomOf="@id/textView_regularPrice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/textView_regularPrice"
                app:layout_constraintTop_toTopOf="@id/textView_salePrice"
                app:layout_constraintBottom_toBottomOf="@id/textView_salePrice"
                android:text="@string/off"
                android:fontFamily="@font/gillsans"
                android:textColor="@color/white"
                android:textSize="@dimen/very_small_text_size"
                android:layout_marginStart="@dimen/medium_margin"
                android:padding="@dimen/very_small_padding"
                android:background="@drawable/rectangle"/>

            <TextView
                android:id="@+id/textView_productName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imageView_productImage"
                app:layout_constraintTop_toBottomOf="@id/textView_salePrice"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_marginTop="@dimen/very_small_margin"
                android:textSize="@dimen/medium_text_size"
                android:fontFamily="@font/gotham_narrow"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/textView_stores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imageView_productImage"
                app:layout_constraintTop_toBottomOf="@id/textView_productName"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/uni_margin"
                android:layout_marginTop="@dimen/very_small_margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/medium_text_size"
                android:fontFamily="@font/gillsans"
                android:textColor="@color/textColor"/>

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/delete"
                app:layout_constraintTop_toBottomOf="@id/textView_stores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/AppButton"/>

            <Button
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/update"
                app:layout_constraintTop_toBottomOf="@id/textView_stores"
                app:layout_constraintEnd_toStartOf="@id/button_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/AppButton"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>